--- a/less/whale/content.less
+++ b/less/whale/content.less
@@ -255,12 +255,10 @@ body.whale-font-scale-small .Whale .content-wrapper .whale-content .whale-conten
 
 body.whale-font-scale-large .Whale .content-wrapper .whale-content .whale-content-main {
 	font-size: 1.08rem;
-	line-height: 1.75rem;
 }
 
 body.whale-font-scale-x-large .Whale .content-wrapper .whale-content .whale-content-main {
 	font-size: 1.18rem;
-	line-height: 1.9rem;
 }
 
 .Whale .content-wrapper .whale-content .whale-content-main .whale-heading-number {
